--- a/css/towerdefense.css
+++ b/css/towerdefense.css
@@ -1,13 +1,12 @@
 .gameTitle{
     width:960px;
     height:640px;
-    margin: 0 auto;
     font-size: 100px;
     font-family: 'Impact', sans-serif;
     color:#333;
     text-shadow: white 0 0 20px;
     text-align: center;
-    margin-top: 0%;
+    margin-top: 0;
     line-height: 64px;
     display: none;
 }
@@ -18,6 +17,7 @@
     top: 0;
     position: absolute;
     left: 0;
+    pointer-events:none;
     }
 
 @-webkit-keyframes animate_background1 {
@@ -189,6 +189,38 @@
     right:0;
     width:27%;
 }
+#player-tower-effect{
+    height: 16%;
+    left: 5%;
+    position: absolute;
+    top: 38%;
+    width: 9%;
+    /*border:2px solid red;*/
+}
+.build_image
+{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    display:none;
+
+}
+.build_image1
+{
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    display:none;
+
+}
+#ai-tower-effect{
+    height: 16%;
+    right: 5%;
+    position: absolute;
+    top: 38%;
+    width: 9%;
+    /*border:2px solid red;*/
+}
 
 #ai-tower .castle{
     bottom: -12%;
@@ -214,7 +246,8 @@
     top: 65%;
     height: 30%;
     /*border: 1px solid red;*/
-    left: 27%
+    left: 27%;
+    z-index: 2;
 }
 .card-frame {
     width: 100%;
@@ -222,30 +255,52 @@
     /*border: 1px solid black;*/
     /*position: absolute;*/
 }
-.card{
-    width: 150px;
-    height: 180px;
-    display: inline-block;
-    margin-right: 20px;
-    background: url(../img/towerdefense/blankcard.png);
-    background-size: 100% 100%;
+.cards{
+   width: 24%;
+    height: 90%;
     position: absolute;
-    top: 7%;
+    top: 6%;
+
+    /*border: 1px solid red;*/
+}
+
+.card-image{
+    width: 100%;
+    height: 100%;
+    top: 1%;
+    left: 1%;
+    position: absolute;
+}
+
+li {
+    list-style: none;
+
+}
+.answer
+{
+    color:red;
+    cursor:pointer;
+}
+#card1{
     left: 13%;
 }
+.cards:hover{
+    -webkit-transform:scale(1.10); /* Safari and Chrome */
+    -moz-transform:scale(1.10); /* Firefox */
+    -ms-transform:scale(1.10); /* IE 9 */
+    -o-transform:scale(1.10); /* Opera */
+    transform:scale(1.10);
+       cursor: pointer;
 
-
-#card1{
-    left: 14%;
 }
 #card2{
-   left: 38.5%;
+   left: 38%;
 }
 #card3{
     left: 63%;
 }
 #resource-panel{
-    width: 15%;
+    width: 10%;
     height: 15%;
     top: 0%;
     left: 0%;
@@ -257,7 +312,9 @@
     /*border: 1px solid red;*/
     height: 32%;
     position: relative;
+    top: 0%;
     }
+
 .resource-name{
     width: 49%;
     height: 100%;
@@ -271,9 +328,19 @@
     width: 49%;
     height: 100%;
     left: 50%;
-    border: 1px solid yellow;
+    /*border: 1px solid yellow;*/
     right: 0%;
 position: absolute;
+    text-align: center;
+    font-size: 1.5em;
+}
+#comp_resource-panel{
+    width: 10%;
+    height: 15%;
+    top: 0%;
+    right: 0%;
+    /*border: 1px solid #000000;*/
+    position: absolute;
 }
 
 /* Question Card */
@@ -281,6 +348,18 @@ position: absolute;
 #qcard, #qid{
     display: none;
     width: 80%;
+}
+#quiz-content
+{   width: 41%;
+    height: 35%;
+    border: 5px solid white;
+    top: 20%;
+    position: absolute;
+    left: 25%;
+    border-radius: 10px;
+    padding: 2px 4px 3px 2px;
+    display: none;
+    z-index: 2;
 }
 
 #bulletA {
